style.css
:root {
  --BrightBlue: hsl(220, 98%, 61%);
  --CheckBackground: linear-gradient hsl(192, 100%, 67%) to hsl(280, 87%, 65%);
  /* light theme */

  --VeryLightGray: hsl(0, 0%, 98%);
  --VeryLightGrayishBlue: hsl(236, 33%, 92%);
  --LightGrayishBlue: hsl(233, 11%, 84%);
  --DarkGrayishBlue: hsl(236, 9%, 61%);
  --VeryDarkGrayishBlue: hsl(235, 19%, 35%);
  /* =========dark theme============= */
  --VeryDarkBlue: hsl(235, 21%, 11%);
  --VeryDarkDesaturatedBlue: hsl(235, 24%, 19%);
  --LightGrayishblue: hsl(234, 39%, 85%);
  --LightGrayishBluehover: hsl(236, 33%, 92%);
  --DarkGrayishBlue: hsl(234, 11%, 52%);
  --VeryDarkGrayishBlue: hsl(233, 14%, 35%);
  --VeryDarkGrayishBlue: hsl(237, 14%, 26%);
  /* ===font fam============== */
  --fontfam: "Josefin Sans", sans-serif;
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  background-color: var(--VeryDarkBlue);
}

/* ===================dark theme============ */
.bg {
  background-image: url(./images/bg-mobile-dark.jpg);
  background-repeat: no-repeat;
  background-size: cover;
  width: 100vw;
  height: 300px;
}

/* ============todo-form======== */
.todo-form {
  width: 100vw;
  margin-top: -150px;
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
}
.header {
  color: var(--VeryLightGray);
  display: flex;
  justify-content: space-between;
  align-items: flex-start;
  width: 80vw;
  margin-bottom: 30px;
}
.header h1 {
  font-family: var(--fontfam);
  letter-spacing: 6px;
  font-weight: 700;
}
.header img {
  cursor: pointer;
}
.moon {
  display: none;
}

/* ============input container====== */
.input-container {
  margin-bottom: 15px;
}
.box {
  width: 80vw;
  height: 50px;
  display: flex;
  align-items: center;
  justify-content: flex-start;
  background-color: var(--VeryDarkDesaturatedBlue);

  border-radius: 8px;
}
.circle {
  width: 20px;
  height: 20px;
  border: 1px solid var(--DarkGrayishBlue);
  border-radius: 50%;
  margin-left: 40px;
  cursor: pointer;
  background-image: linear-gradient(
    var(--VeryDarkDesaturatedBlue),
    var(--VeryDarkDesaturatedBlue),
    var(--VeryDarkDesaturatedBlue),
    var(--VeryDarkDesaturatedBlue)
  );
  transition: 300ms ease-in;
  display: flex;
  align-items: center;
  justify-content: center;
}
.check {
  opacity: 0;
}

.input {
  margin-left: 15px;
  background-color: var(--VeryDarkDesaturatedBlue);
  border: none;
  outline-style: none;
  cursor: pointer;
  height: 20px;
  width: 50vw;
  color: var(--LightGrayishblue);

  caret-color: var(--BrightBlue);
  font-size: 15px;
  font-family: var(--fontfam);
}
input::placeholder {
  text-transform: capitalize;
}
/* ========list container======= */
.list-container {
  border-radius: 10px 10px 0px 0px;
  border-bottom: 0px;
  overflow: hidden;
}

/* ============task-box============== */
.task-box {
  display: flex;
  justify-content: space-between;
  cursor: pointer;
  border-bottom: 0.5px solid var(--LightGrayishBlue);
  border-radius: 0px;
  z-index: 1;
}
.task-check {
  display: flex;
  align-items: center;
  justify-content: space-between;
}
.task {
  font-family: var(--fontfam);
  font-weight: 400;
  margin-left: 15px;
  text-transform: capitalize;
  color: var(--LightGrayishblue);
  cursor: pointer;
}
.remove-task {
  margin-right: 20px;
  width: 15px;
  cursor: pointer;
  opacity: 0;
  transition: 300ms;
}

.task-data {
  border-radius: 0px 0px 10px 10px;
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin-bottom: 20px;
}
.task-data p {
  color: var(--DarkGrayishBlue);
  font-family: var(--fontfam);
  font-weight: 400;
  font-size: 12px;
  cursor: pointer;
}
.clear {
  margin-right: 20px;
  transition: 300ms ease-in;
}

.task-value {
  margin-left: 50px;
}
.filter-btns {
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 1rem;
}

.btn {
  font-family: var(--fontfam);
  color: var(--DarkGrayishBlue);
  text-transform: capitalize;
  cursor: pointer;
  transition: 300ms ease-in;
}
.drag-drop {
  font-family: var(--fontfam);
  font-weight: 400;
  font-size: 14px;

  display: flex;
  align-items: center;
  justify-content: center;
  margin-top: 40px;
  color: var(--DarkGrayishBlue);
}

/* =============hover========== */
.circle:hover {
  border: 1px solid transparent;
  border-radius: 80px;
  background-image: linear-gradient(
      var(--VeryDarkDesaturatedBlue),
      var(--VeryDarkDesaturatedBlue)
    ),
    linear-gradient(to right, hsl(192, 100%, 67%), hsl(280, 87%, 65%));
  background-origin: border-box;
  background-clip: content-box, border-box;
}

.task-box:hover,
.circle:hover,
.task-check:hover + .remove-task {
  opacity: 1;
}
.btn:hover {
  color: var(--VeryLightGrayishBlue);
}

/*=========== white theme================== */
.white-bg {
  background: url(./images/bg-mobile-light.jpg);
  background-repeat: no-repeat;
  background-size: cover;
}
.white-box {
  background-color: var(--VeryLightGray);
}

.white-input {
  background-color: var(--VeryLightGray);
  color: var(--VeryDarkGrayishBlue);
}
.white-task {
  color: var(--VeryDarkGrayishBlue);
}
.white-task-btn {
  background-image: linear-gradient(white, white);
}
.white-circle {
  background-image: linear-gradient(white, white);
}
.white-circle:hover {
  border: 1px solid transparent;
  border-radius: 80px;
  background-image: linear-gradient(var(--VeryLightGray), var(--VeryLightGray)),
    linear-gradient(to right, hsl(192, 100%, 67%), hsl(280, 87%, 65%));
  background-origin: border-box;
  background-clip: content-box, border-box;
}
.white-btn:hover {
  color: var(--VeryDarkDesaturatedBlue);
}

/* ================media /dark theme ====================*/
@media only screen and (min-width: 700px) {
  .bg {
    background: url(./images/bg-desktop-dark.jpg);
    background-size: cover;
  }
  .white-bg {
    background: url(./images/bg-desktop-light.jpg);
    background-size: cover;
  }
  .header {
    width: 500px;
  }
  .box {
    width: 500px;
  }
  #input {
    width: 400px;
  }
  .filter-container {
    display: flex;
    justify-content: center;

    flex-direction: row;
    width: 500px;
    border-radius: 0px 0px 10px 10px;
    overflow: hidden;
  }
  .task-data {
    border-radius: 0px 0px 10px 10px;
    overflow: hidden;
  }
  .filter-btns {
    border-radius: 0px 0px 10px 10px;
    position: absolute;
    overflow: hidden;
  }
  .btn {
    z-index: 1111;
  }
  .clear {
    position: absolute;

    z-index: 1111;
    margin-left: 30px;
    margin-left: 400px;
  }
  .task-value {
    /* position: absolute; */
    z-index: 111;
  }
}

/* ===========js class========== */
.display-items {
  display: flex;
}
.circle-completed {
  background-image: linear-gradient(
    to right,
    hsl(192, 100%, 67%),
    hsl(280, 87%, 65%)
  );
}

.task-completed {
  text-decoration: line-through;
  color: var(--VeryDarkGrayishBlue);
}
.selected-filter {
  color: var(--BrightBlue);
}
.show-opacity {
  opacity: 1;
}

